# dat-shape

./: .gitignore  profile-it.py  pyproject.toml  shape.json
dat_shape/: bundles.py  console.py  manifests.py  poe_util.py
service/: dat-shape.service  dat-shape.timer
